# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-client-2.2.0.0_p20100813 (13 Aug 2010)

  13 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.2.0.0_p20100812.ebuild,
  +calculate-client-2.2.0.0_p20100813.ebuild:
  Update live ebuild from 13/08/2010.

*calculate-client-2.2.0.0_p20100812 (12 Aug 2010)

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.2.0.0_p20100811-r1.ebuild,
  +calculate-client-2.2.0.0_p20100812.ebuild:
  Update live ebuild from 12/08/2010.

*calculate-client-2.1.18-r2 (12 Aug 2010)

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +files/client_i18n_path.patch, -calculate-client-2.1.18-r1.ebuild,
  +calculate-client-2.1.18-r2.ebuild:
  Add path for place i18n files.

*calculate-client-2.2.0.0_p20100811 (11 Aug 2010)

  11 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.2.0.0_rc1.ebuild,
  +calculate-client-2.2.0.0_p20100811.ebuild:
  Added live ebuild from 11/08/2010.

*calculate-client-2.1.18-r1 (27 Jul 2010)

  27 Jul 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.18-r1.ebuild,
  +files/calculate-client-2.1.18-r1.patch:
  Add fix for package rename from mozilla-firefox to firefox.

*calculate-client-2.2.0.0_rc1 (21 Jun 2010)

  21 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.0.0_rc1.ebuild:
  Added first release candidate calculate-client-2.2.0.0.

  03 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-9999.ebuild:
  Removed live ebuild for calculate-client less 2.2.

  02 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-2.2.9999.ebuild:
  Add calculate-lib depend to live ebuild.

  02 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-2.2.9999.ebuild:
  Fix executing install/unistall command.
