@@ -10,7 +10,7 @@ EBUILD calculate-client-2.1.17-r1.ebuild 1809 RMD160 9b2e60c8b48807d86273fc9b78b
 EBUILD calculate-client-2.1.17-r2.ebuild 1896 RMD160 01fb62dab724750b7514cb57353214a2d4f75337 SHA1 a43f4873532be1ca1edae47828fc22b0f164b88c SHA256 3da7be8962541bb447e667de5e3e2c67f06beda528b3282af4741a97265f6312
 EBUILD calculate-client-2.1.18-r3.ebuild 1994 RMD160 0f3249e43b0888e4d3ca86aaf362e312e87f18c2 SHA1 a94264745191fc573288c98e0290b9dd27b2f559 SHA256 a70a163ad73b11cd8625f6b86717dfacc69b14d9c8d2385337b7a4d564f7cf6f
 EBUILD calculate-client-2.1.18.ebuild 1695 RMD160 91c6a5f07302640ad649824ed10d6495a724df58 SHA1 6e7c10b192a02f0daeb705d93585cd5db9fbff0d SHA256 ebc7776a3c62d3d37c6d36e02d78b1ceffea826229a213047371a6fde645f84f
-EBUILD calculate-client-2.2.0.0_p20100813.ebuild 1766 RMD160 909350f417944011e3a33cf8849848ddc973b10b SHA1 a2aa1dbb839cc62fbc14d79f80c67e8d7d52ca37 SHA256 7a9e18e2af1145a3bd25981036bcd69e4975ca0e762aca77fc246196de9c64df
+EBUILD calculate-client-2.2.0.0_p20100813-r1.ebuild 1770 RMD160 cc8068bd4f68cb8909bbb9c6ca08341c5d9676ff SHA1 228a5c1abdf6dfe813017f77e6d7965665185145 SHA256 1bda9d0a22d8328c29e5144d2aa1890829fe66fae695e6aadcadfadc863843aa
 EBUILD calculate-client-2.2.9999.ebuild 1718 RMD160 f88304830d176bde5e48389c59664fd4f810a1f3 SHA1 d4c1a942e988304a2b5dee4842932e6b360a9f65 SHA256 86a88789729dd8c68d662d62c61dbe13cfeca74a6b1e6f1c878f6cb67f60dc41
-MISC ChangeLog 5493 RMD160 818c686d6c2aece32b2bdcdeb3fe6ec07e5a8881 SHA1 305e6a88198c22ef646e1f8d1662813770cdaeed SHA256 360a7941a5997160b67753dd1420fc465194a6fb931848470f9d1d343ac46b0a
+MISC ChangeLog 5725 RMD160 6ec43443544dde5a81a20fab76e0a40eb1eb4b03 SHA1 253d82517caf5929092a1950066f4c5d3c34673b SHA256 d4fcb7c1ac9e1d69cf28eb23689eb337d6e8f06264ff8ced019f1ad32f9d5253
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
