@@ -1,5 +1,5 @@
 AUX calculate-desktop-2.2.0.0_rc1-r1.patch 456 RMD160 f4f15ea8be06a9e0d71494f23126be5419f07685 SHA1 79dd0a07fcd6c6ec5330e6afa5dcbf6a9fa3208f SHA256 96fe2e348b986000f6d5b069543417df07af1f83099869e451764d385c6738f6
-EBUILD calculate-desktop-2.2.0.0_p20100813.ebuild 1346 RMD160 c12e776386c483df770bd9bfdbad4a50433dc5d3 SHA1 aa46ae4b3ba7e00fc564d1411e6238e9b7f418d8 SHA256 78eaad6986845ccb92b81cc4fce91aa40c6431721e84f7f3a7e2003fba7f8550
+EBUILD calculate-desktop-2.2.0.0_p20100813-r1.ebuild 1346 RMD160 583b96c387ad63a84f7c1adef31014621c84e882 SHA1 fa10b17b9c30dbbf5ff46f929c574ea5e9840d8b SHA256 914fd7ea5d217baf83582bcffdb54666b88a16a1e44ea5f6a997140653807343
 EBUILD calculate-desktop-2.2.9999.ebuild 1105 RMD160 f4e301021dde0b986beb63e09df2da7198196bee SHA1 30b0c9a44986ac670df023f47070d9a4a6bff5b4 SHA256 75657971d3049a918cb3e3286af564caa646c8ddafd8344437e84a476fccb929
 MISC ChangeLog 2102 RMD160 40bcfd544407db42150c85d87f6dd12beb76611f SHA1 44bd7d4896e3a581204bbbb85ebe2800f40e50ed SHA256 dce620fb80c04aaecfebf431905ce1e9769475a23c59448e66d54a16f000d22c
 MISC metadata.xml 315 RMD160 36a1a8d03aed0a483def83e076f484a64d452a8b SHA1 f6e70641eab777d2417d8a7600e8d3f09f53f96f SHA256 67fea0b1af7d10c0f86e72ab40f527e99c6f81f7aace4716344bdfb97c769a18
