@@ -15,6 +15,6 @@ LICENSE="Apache-2.0"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 
-DEPEND="~sys-apps/calculate-lib-2.2.0.0_p20100812"
+DEPEND="~sys-apps/calculate-lib-2.2.0.0_p20100813"
 
 RDEPEND="${DEPEND}"
