@@ -7,8 +7,8 @@ EBUILD calculate-lib-2.1.10-r1.ebuild 730 RMD160 04e6029a7220a267356eb463d1bad3e
 EBUILD calculate-lib-2.1.7.ebuild 578 RMD160 673b894f3992ce17a6f31e4deb292c647eb96690 SHA1 f73944ea64b1d3a1f9d1027be32efb2e22a4a796 SHA256 2406070a830ac39f4701ece61d7b2d7d5a220e057db19078b23ce50b3649dbbf
 EBUILD calculate-lib-2.1.8-r1.ebuild 730 RMD160 a3e9d20526f3078d1f1dc8894a3ac88a090cf968 SHA1 6bc25d2449e5f54df3675311ff5211bc00dcf907 SHA256 764f5b146cc9064de5e1c920ec88b0b91c5fb696c73c853435c7f7750b8bf0db
 EBUILD calculate-lib-2.1.9-r1.ebuild 730 RMD160 04e6029a7220a267356eb463d1bad3e9e4ff0bc0 SHA1 b85072f4d22760283adecdd6b10e21ddd14ea73f SHA256 c4b9c1deb7f64426440e1f9249102cbc5d3f52603166870f1c2819ec474015d6
-EBUILD calculate-lib-2.2.0.0_p20100812-r1.ebuild 781 RMD160 d94bbcd5c7978b5a8351870764ef8150d1707b01 SHA1 38f4d8664cf145bfb88a792007ad90c3f803ab71 SHA256 8a5542b1504bf6a8aebbe90d34fd70927f16369efe3b55b983de1a2d0a01bcc2
+EBUILD calculate-lib-2.2.0.0_p20100813.ebuild 781 RMD160 3a789a8c8cc2e1dfa3fd5a975dbdd7ae2f78e021 SHA1 3f3e7256e61c1ffea889234c60206d64478c5f4c SHA256 12165d75d8776f13a7a7e012053b753c2525a50d0276631ecaeadeaa3744025d
 EBUILD calculate-lib-2.2.9999.ebuild 592 RMD160 e559e7ccafdb150093a055b4f90bf33666ab796c SHA1 752fe9e05ce1380af9a44bf5e81a56dc00f36506 SHA256 f4cf5511cca3007b735cf98871ee72442c6bf677be63349058d1bb029a4b1abf
 EBUILD calculate-lib-9999.ebuild 476 RMD160 e510e0aa98b7f6da9acc37197073cac0d5d6a47f SHA1 393c416fcfd77d6c05aea8932a7a1e3805aa926d SHA256 a9eee592ec352db7852e93ad33249072307051d3bda6cfdcd034ea9b96747578
-MISC ChangeLog 2826 RMD160 897d07c8e32b10a29731f946451b3e61914b461d SHA1 af0575aff15d67d183c5e2e097281fa29754890d SHA256 780f9a16613a6071c09ae541cf93f8e22da229e32d8fb1b30175378f28b09d27
+MISC ChangeLog 3046 RMD160 79a95913a5c7299b6288c8dba9a520cee303a7ea SHA1 f4af94b6944ee028ecd1e1d74d5af6fa1e133b8f SHA256 bc53bb55b1e45ffb6edbda12552b23520491c4f17eeaf69fa33a6a4db9f45e6f
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
