@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.2.0.0_p20100813 (13 Aug 2010)
+
+  13 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-lib-2.2.0.0_p20100812-r1.ebuild,
+  +calculate-lib-2.2.0.0_p20100813.ebuild:
+  Update live ebuild.
+
 *calculate-lib-2.2.0.0_p20100812-r1 (13 Aug 2010)
 
   13 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
